[package]
name = "jira_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tempfile = "3.10.1"
ellipse = "0.2.0"
itertools = "0.13.0"
clearscreen = "3.0.0"

[dev-dependencies]
tempfile = { version = "3.10.1" }